--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@eslint/js": "^9.18.0",
     "eslint": "^9.18.0",
+    "globals": "^15.14.0",
     "jiti": "^2.4.2",
-    "neostandard": "^0.12.0",
     "typescript": "~5.6.2",
+    "typescript-eslint": "^8.20.0",
     "vite": "^6.0.5"
   }
 }
